--- a/frontend/app/styles/partials/preview.scss
+++ b/frontend/app/styles/partials/preview.scss
@@ -7,3 +7,9 @@
   margin-left: 50px;
   padding-top: 200px;
 }
+
+// scss-lint:disable all
+.preview {
+  top : -1% !important;
+}
+// scss-lint:enable all
