--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -123,7 +123,7 @@
                     <div class="ui horizontal divider"></div>
                     <div class="content">
                         <div class="center aligned">
-                            {{ text-component/font-size sendDefSize=(action 'mutateFontSize') sendDefFont=(action 'mutateCustomFont')}}
+                            {{ text-component/font-size fontsizeall=fontsizeall fonttypeall=fonttypeall sendDefSize=(action 'mutateFontSize') sendDefFont=(action 'mutateCustomFont')}}
                         </div>
                     </div>
                 </div>
