Fixes #1412 : Uses Ember-cli-notifications to show notification messages

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -10,3 +10,4 @@
     {{footer-main socialMedia=model.socialMedia}}
 </div>
 {{ember-notify messageStyle='semantic-ui' classPrefix='notification-container'}}
+{{notification-container position="top"}}
