Provided Default Font Size

--- a/frontend/app/templates/components/text-component/font-size.hbs
+++ b/frontend/app/templates/components/text-component/font-size.hbs
@@ -42,7 +42,7 @@
     <div class="center aligned column">
       <div class="one wide column">
         {{#ui-dropdown class="selection" onChange=(action (mut font1))}}
-        <div class="default text">Size</div>
+        <div class="default text">10</div>
         <i class="dropdown icon"></i>
         <div class="menu">
           <div class="item" data-item="7">7</div>
@@ -89,7 +89,7 @@
     <div class="center aligned column">
       <div class="one wide cloumn">
         {{#ui-dropdown class="selection" onChange=(action (mut font2))}}
-        <div class="default text">Size</div>
+        <div class="default text">10</div>
         <i class="dropdown icon"></i>
         <div class="menu">
           <div class="item" data-item="7">7</div>
@@ -136,7 +136,7 @@
     <div class="center aligned column">
       <div class="one wide cloumn">
         {{#ui-dropdown class="selection" onChange=(action (mut font3))}}
-        <div class="default text">Size</div>
+        <div class="default text">10</div>
         <i class="dropdown icon"></i>
         <div class="menu">
           <div class="item" data-item="7">7</div>
@@ -183,7 +183,7 @@
     <div class="center aligned column">
       <div class="one wide cloumn">
         {{#ui-dropdown class="selection" onChange=(action (mut font4))}}
-        <div class="default text">Size</div>
+        <div class="default text">10</div>
         <i class="dropdown icon"></i>
         <div class="menu">
           <div class="item" data-item="7">7</div>
@@ -230,7 +230,7 @@
     <div class="center aligned column">
       <div class="one wide cloumn">
         {{#ui-dropdown class="selection" onChange=(action (mut font5))}}
-        <div class="default text">Size</div>
+        <div class="default text">10</div>
         <i class="dropdown icon"></i>
         <div class="menu">
           <div class="item" data-item="7">7</div>
