Simplified the UI of Password Reset Form

--- a/frontend/app/templates/components/password-comp.hbs
+++ b/frontend/app/templates/components/password-comp.hbs
@@ -1,8 +1,10 @@
-<div class="ui stackable centered grid reset-pass">
+<div class="ui stackable four column centered grid reset-pass">
     <div class="column">
         <form class="ui fluid form">
-            <div class="required field div">
-                <div class="title">Reset Password</div>
+            <div class="required field form-div">
+                <div class="form-title">Reset Password</div>
+                <div class="ui hidden divider"></div>
+                <div class="ui secondary form-title">Please enter your New Password</div>
                 <div class="ui hidden divider"></div>
                 {{input name="password" value=pwd placeholder="New Password" type="password"}}
             </div>
