sets long names toggle on

--- a/frontend/app/templates/components/text-component/font-size.hbs
+++ b/frontend/app/templates/components/text-component/font-size.hbs
@@ -60,7 +60,7 @@
     </div>
     <div class="center aligned column">
       <div class="ui toggle checkbox">
-        <input name="public" type="checkbox">
+        <input name="public" type="checkbox" checked="checked">
         <label></label>
       </div>
     </div>
@@ -107,7 +107,7 @@
     </div>
     <div class="center aligned column">
       <div class="ui toggle checkbox">
-        <input name="public" type="checkbox">
+        <input name="public" type="checkbox" checked="checked">
         <label></label>
       </div>
     </div>
@@ -154,7 +154,7 @@
     </div>
     <div class="center aligned column">
       <div class="ui toggle checkbox">
-        <input name="public" type="checkbox">
+        <input name="public" type="checkbox" checked="checked">
         <label></label>
       </div>
     </div>
@@ -201,7 +201,7 @@
     </div>
     <div class="center aligned column">
       <div class="ui toggle checkbox">
-        <input name="public" type="checkbox">
+        <input name="public" type="checkbox" checked="checked">
         <label></label>
       </div>
     </div>
@@ -248,7 +248,7 @@
     </div>
     <div class="center aligned column">
       <div class="ui toggle checkbox">
-        <input name="public" type="checkbox">
+        <input name="public" type="checkbox" checked="checked">
         <label></label>
       </div>
     </div>
