--- a/frontend/app/styles/partials/nav-bar.scss
+++ b/frontend/app/styles/partials/nav-bar.scss
@@ -2,6 +2,20 @@
   background-color: #ffffff !important;;
 }
 
+@media only screen and (max-width: 600px) {
+  .create{
+    font-size: 12px;
+  }
+
+  .header h2{
+    font-size: 16px;
+  }
+
+  .mobile-hide{
+    display: none;
+  }
+}
+
 .orange.text {
   color: #F2711C !important;
   font-weight: 300 !important;
