--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -7,7 +7,7 @@
             {{#ui-dropdown class='large item' action='hide'}}
                 <div class="upper">
                     <img class="ui avatar image" src="{{session.currentUser.photoURL}}">
-                    {{session.currentUser.displayName}}
+                    <span class="mobile-hide">{{session.currentUser.displayName}}</span>
                 </div>
                 <i class="dropdown icon"></i>
                 <div class="menu profile-dropdown-menu">
