Fixes #1654: Improved color selector in create badges

--- a/frontend/app/templates/components/background-component/color-bg-component.hbs
+++ b/frontend/app/templates/components/background-component/color-bg-component.hbs
@@ -1,7 +1,7 @@
 <div class="field">
     <label>Select from a custom color</label>
     <div class="ui grid">
-        <div class="two wide column">
+        <div class="seven wide mobile four wide tablet three wide computer column">
             {{col-pick-input value=defColor}}
         </div>
         <div class="column" style="background-color: #{{backColor}}; height: 35px; width: 35px; margin-top: 15px;">
