--- a/frontend/app/templates/components/text-component/font-color.hbs
+++ b/frontend/app/templates/components/text-component/font-color.hbs
@@ -1,7 +1,7 @@
 <div class="field">
     <label>Select font color</label>
     <div class="ui grid">
-        <div class="six wide column">
+        <div class="seven wide mobile four wide tablet three wide computer column">
             {{col-pick-input value=defFontColor}}
         </div>
         <div class="column" style="background-color: #{{fontColor}}; height: 35px; width: 35px; margin-top: 15px;">
