Fixes #1659: Making admin settings responsive

--- a/frontend/app/templates/components/forms/system-settings-form.hbs
+++ b/frontend/app/templates/components/forms/system-settings-form.hbs
@@ -6,7 +6,7 @@
                 {{'Where is the application running ?'}}
             </div>
         </h3>
-        <div class="ui three column grid">
+        <div class="ui three column stackable grid">
             <div class="ui row">
                 <div class="two wide column">
                     <div class="two wide  field">
