Information buttons not properly aligned
The orange info buttons on badgeyay.com/create-badges were incorrectly aligned
,the alignment is being fixed in this issue.

Resolves #1674

--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -54,17 +54,21 @@
                 <div class="ui clearing segment">
                     <div class="ui form width-container">
                         <p>
-                            <b>Select from one of the Paper Sizes</b>
-                            &nbsp;
+                            <b>S    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+elect from one of the Paper Sizes</b>
+                            &nbs    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+p;
                             <div class="content">
                                 <div class="center aligned">
                                     {{ badge-component/paper-size sendPaperSize=(action 'mutatePaperSize') }}
                                 </div>
                             </div>
                         </p>
+                    </div>
+                <div class="ui form width-container">
                     <p>
                         <b>Select from one of the Badge Sizes</b>
-                        <div class="ui right floated icon orange basic button" data-tooltip="Badge size is in inches, 1 inch = 2.54 cm, 1 inch = 25.4 mm" data-position="right center">
+                        <div class="ui right floated icon orange basic button guide" data-tooltip="Badge size is in inches, 1 inch = 2.54 cm, 1 inch = 25.4 mm" data-position="right center">
                             <i class="info icon"></i>
                         </div>
                     </p>
