adding favicon and adding starter for edit badge

--- a/frontend/app/templates/components/user-component/my-badges.hbs
+++ b/frontend/app/templates/components/user-component/my-badges.hbs
@@ -32,7 +32,11 @@
                       </a>
                   {{/ui-popup}}
                   {{#ui-popup content='Edit' class="ui icon button"}}
-                      <i class="edit icon"></i>
+                    {{#link-to 'editbadge' class="large item navbar-dropdown upper"}}
+                                        
+                    <i   class="edit icon"></i>
+
+                    {{/link-to}}
                   {{/ui-popup}}
                   {{#ui-popup content='Delete' class='ui icon button' click=(action 'deleteBadge' badge)}}
                       <i class="trash alternate outline icon"></i>
