--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -2,7 +2,7 @@
     <div class="right floated right aligned two wide column" style="margin-right:50px;">
         
 
-<label class="switch" {{action 'togglePreview'}} onclick="document.getElementById('toggle').checked=!document.getElementById('toggle').checked" id="switch"   data-tooltip="Toggle Preview" data-position="left center" >
+<label class="switch" {{action 'togglePreview'}}  id="switch"   data-tooltip="Toggle Preview" data-position="left center" >
   <input type="checkbox" id="toggle" checked>
   <span class="slider round"></span>
 </label>
@@ -184,6 +184,7 @@
             sh=socialHandle
             desg=designation
             defColor=defFontColor
+            backColor=backColor
             font_fn=defFont1Size
             font_ln=defFont2Size
             font_desg=defFont3Size
