--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -1,9 +1,9 @@
 <div class="ui stackable grid">
-    <div class="right floated right aligned two wide column" style="margin-right:50px;">
+    <div class="right floated right aligned one wide column" >
         
 
-<label class="switch" {{action 'togglePreview'}}  id="switch"   data-tooltip="Toggle Preview" data-position="left center" >
-  <input type="checkbox" id="toggle" checked>
+<label class="switch" {{action 'togglePreview'}}    data-tooltip="Toggle Preview" data-position="left center" >
+  <input  class="switchcheck"  type="checkbox"  checked>
   <span class="slider round"></span>
 </label>
 
