Changes the orientation of the size row
The paper-size and the badge-size were vertically stacked which left
out too much white space, it is changed to horizontal row alignment

Fixes #1484

--- a/frontend/app/templates/components/badge-component/paper-size.hbs
+++ b/frontend/app/templates/components/badge-component/paper-size.hbs
@@ -1,4 +1,5 @@
 <div class="inline fields">
+    <div class="grouped fields">
     <div class="field">
         <div class="ui radio checkbox" onclick={{ action 'mutatePaperSize' 'A2' }}>
             <input name="size" value="A2" type="radio">
@@ -23,5 +24,5 @@
             <label>US Letter</label>
         </div>
     </div>
-
+</div>
 </div>
