--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -51,8 +51,8 @@
                         </div>
                 </div>
             </div>
-                <div class="ui clearing segment">
-                    <div class="ui form width-container">
+                <div class="ui equal width grid clearing segment">
+                    <div class="ui column form">
                         <p>
                             <b>Select from one of the Paper Sizes</b>
                             &nbsp;
@@ -63,8 +63,7 @@
                             </div>
                         </p>
                     </div>
-                <div class="ui horizontal divider"></div>
-                <div class="ui form width-container">
+                <div class="ui column form ">
                     <p>
                         <b>Select from one of the Badge Sizes</b>
                         <div class="ui right floated icon orange basic button" data-tooltip="Badge size is in inches, 1 inch = 2.54 cm, 1 inch = 25.4 mm" data-position="right center">
