--- a/frontend/app/templates/components/badge-component/badge-size.hbs
+++ b/frontend/app/templates/components/badge-component/badge-size.hbs
@@ -1,4 +1,5 @@
 <div class="inline fields">
+  <div class="grouped fields">
   <div class="field">
     <div class="ui radio checkbox" onclick={{action 'mutateBadgeSize' '4x3'}}>
       <input name="badge" value="4x3" type="radio">
@@ -10,5 +11,6 @@
       <input name="badge" value="4.5x4" type="radio">
       <label>4.5"x4"</label>
     </div>
+  </div>
   </div>
 </div>
